[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrolyze"
version = "0.1.0.dev0"
description = "A toolkit for radio/sub-mm position-position-velocity (PPV) cubes and spectra."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Christof Buchbender", email = "buchbend@ph1.uni-koeln.de" }]
keywords = ["astronomy", "radio-astronomy", "sub-mm", "spectral-line", "cubes", "PPV"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy>=6.0",
    "spectral-cube>=0.6",
    "radio-beam>=0.3",
    "reproject>=0.13",
    "regions>=0.9",
    "specutils>=1.13",
    "numpy",
    "matplotlib",
    "typer>=0.12",
    "rich>=13",
    "dynaconf>=3.2",
    "SQLAlchemy>=2.0",
    # The xarray-native Zarr v3 backend (issue #23, ADR-0006): a second on-disk store
    # alongside FITS, lazy/dask-backed. astrolyze stays thin — storage, coords and chunking
    # are these libraries' job. Pre-authorised by PRD #21.
    "xarray>=2024.1",
    "zarr>=3",
    "dask>=2024.1",
    # The collection capability (issue #57, PRD #56): a published corpus is indexed by a single
    # catalog.parquet read through fsspec, so the same Collection.open(...) call serves a local
    # directory today and an s3:// URL later (#63) with no API change. pyarrow reads the parquet;
    # fsspec is the storage-neutral path layer. mocpy stays an optional extra (exact MOC coverage,
    # #62) — the bare install works end-to-end with center+radius prefiltering.
    "pyarrow>=15",
    "fsspec>=2024.1",
]

[project.optional-dependencies]
# ruff is the single linter *and* formatter (no black) — `ruff check` + `ruff format`.
dev = ["pytest>=8", "ruff>=0.5"]
# Tooling to run the interactive tutorial (examples/tutorial.ipynb).
notebook = ["jupyterlab>=4", "ipykernel>=6"]
# Object-store access (issue #63): s3fs is the fsspec driver that lights up ``s3://`` corpus
# roots — `Collection.open("s3://…")` / `Cube.from_zarr("s3://…")`. It is an OPT-IN extra, not a
# hard dependency: a bare install works end-to-end on local (and ``file://`` / ``memory://``)
# corpora, and imports stay lazy so its absence never breaks local use (fsspec raises a clear
# ImportError only if an ``s3://`` URL is actually opened without it). Install with
# `pip install astrolyze[s3]`. Remote caching is fsspec passthrough — e.g. a
# `simplecache::s3://…` URL caches reads with no astrolyze cache layer.
s3 = ["s3fs>=2024.1"]

[project.urls]
Homepage = "https://github.com/buchbend/astrolyze"
Repository = "https://github.com/buchbend/astrolyze"

[project.scripts]
astrolyze = "astrolyze.cli:app"

[tool.setuptools.packages.find]
include = ["astrolyze*"]

[tool.setuptools.package-data]
astrolyze = ["viz/*.mplstyle"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# Notebooks legitimately run setup before importing — a matplotlib backend, warnings filters,
# an %matplotlib magic — so E402 ("module import not at top of cell") fights the idiom. Allow
# it in .ipynb only; library/test .py still hold imports at the top.
"*.ipynb" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
